Bug 741728 - Previous conversations should be collapsed by default. r=florian, ui-r=florian.

--- a/mail/components/im/themes/chat.css
+++ b/mail/components/im/themes/chat.css
@@ -335,7 +335,7 @@ grippy {
   border-style: none;
 }
 
-#logList {
+#logTree {
   margin: 0 0;
 }
 
@@ -391,7 +391,7 @@ grippy {
               inset 0 1px 2px rgba(0, 0, 0, 0.7);
 }
 
-.conv-nicklist, #logList {
+.conv-nicklist, #logTree {
   -moz-appearance: none;
   width: 250px;
   border: 0px;
