--- a/mail/themes/qute/mail/chat.css
+++ b/mail/themes/qute/mail/chat.css
@@ -89,7 +89,7 @@
   border-width: 0px;
 }
 
-#logList,
+#logTree,
 .conv-nicklist {
   -moz-appearance: none;
   border: none;
